--- a/.env
+++ b/.env
@@ -65,3 +65,5 @@ VITE_APP_NAME="${APP_NAME}"
 AUTH_PASSWORD_TIMEOUT=630720000
 
 SESSION_EXPIRE_ON_CLOSE=false
+
+FISCAL_BRIDGE_URL=http://localhost:9000
